k8s/wordpress/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: example-wordpress
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: example
      tier: frontend
      env: prod
  template:
    metadata:
      labels:
        app: example
        tier: frontend
        env: prod
    spec:
      containers:
      - name: wordpress
        image: registry.gitlab.com/USERNAME/PROJECT_NAME/wordpress:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: wordpress-http
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/example.com
#  UNCOMMENT WHEN TUTORIAL POINTS YOU TO THIS PLACE - Git authorization automation
#        - name: ssh-keys
#          readOnly: true
#          mountPath: /home/deployer/.ssh/secret
      imagePullSecrets:
          - name: registry.gitlab.com
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: example-wordpress-pvc
#  UNCOMMENT WHEN TUTORIAL POINTS YOU TO THIS PLACE - Git authorization automation
#      - name: ssh-keys
#        secret:
#          secretName: gitlab-deploy-key
#          items:
#          - key: config
#            path: config
#            mode: 0644
#          - key: ssh-privatekey
#            path: ssh-privatekey
#            mode: 0644
#          - key: ssh-publickey
#            path: ssh-publickey
#            mode: 0644
