k8s/wordpress/dev-deployment.yaml
apiVersion: apps/v1 # for versions of Kubernetes <1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: dev-example-wordpress
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: example
      tier: frontend
      env: dev
  template:
    metadata:
      labels:
        app: example
        tier: frontend
        env: dev
    spec:
      containers:
      - name: wordpress
        image: registry.gitlab.com/YOUR_USERNAME/PROJECT_NAME/wordpress:v1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: wordpress-http
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/example.com
#  UNCOMMENT WHEN TUTORIAL POINTS YOU TO THIS PLACE - Git authorization automation
#        - name: ssh-keys
#          readOnly: true
#          mountPath: /home/deployer/.ssh/secret
#  UNCOMMENT WHEN TUTORIAL POINTS YOU TO THIS PLACE - Setup HTTP BASIC authentication for development environment
#        - name: auth-secret
#          readOnly: true
#          mountPath: /etc/nginx/http-basic
      imagePullSecrets:
          - name: registry.gitlab.com
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: dev-example-wordpress-pvc
#  UNCOMMENT WHEN TUTORIAL POINTS YOU TO THIS PLACE - Git authorization automation
#      - name: ssh-keys
#        secret:
#          secretName: gitlab-deploy-key
#          items:
#          - key: config
#            path: config
#            mode: 0644
#          - key: ssh-privatekey
#            path: ssh-privatekey
#            mode: 0644
#          - key: ssh-publickey
#            path: ssh-publickey
#            mode: 0644
#  UNCOMMENT WHEN TUTORIAL POINTS YOU TO THIS PLACE - Setup HTTP BASIC authentication for development environment
#      - name: auth-secret
#        secret:
#          secretName: dev-example-auth-secret
#          items:
#          - key: auth
#            path: auth
#            mode: 0644
