k8s/wordpress/service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-wordpress-lb
  labels:
    app: example
    env: prod
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: example
    tier: frontend
    env: prod
  type: LoadBalancer
